--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/google-plus": "^5.12.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "angularfire2": "^5.2.1",
+    "angularx-social-login": "^1.2.7",
+    "cordova-plugin-googleplus": "^8.0.0",
     "core-js": "^2.5.4",
+    "firebase": "^6.4.0",
     "google-libphonenumber": "^3.2.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -56,5 +61,12 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-googleplus": {
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.893912839232-s3nse0a5ihs4cqe885i1okp08n9oi36s"
+      }
+    }
+  }
 }
