--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@types/jwt-decode": "^2.2.1",
     "angularfire2": "^5.2.1",
     "angularx-social-login": "^1.2.7",
     "cordova-plugin-googleplus": "^8.0.0",
