--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@pusher/chatkit-client": "^1.11.0",
     "@types/jwt-decode": "^2.2.1",
     "angularfire2": "^5.2.1",
     "angularx-social-login": "^1.2.7",
+    "axios": "^0.19.0",
     "cordova-plugin-googleplus": "^8.0.0",
     "core-js": "^2.5.4",
     "firebase": "^6.4.0",
     "google-libphonenumber": "^3.2.3",
     "jwt-decode": "^2.2.0",
     "ngx-image-compress": "^8.0.3",
+    "ngx-infinite-scroll": "^8.0.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
