--- a/package.json
+++ b/package.json
@@ -20,17 +20,27 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/camera": "^5.13.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.13.0",
     "@ionic-native/google-plus": "^5.12.0",
+    "@ionic-native/paypal": "^5.13.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/stripe": "^5.13.0",
     "@ionic/angular": "^4.7.1",
     "@pusher/chatkit-client": "^1.11.0",
     "@types/jwt-decode": "^2.2.1",
     "angularfire2": "^5.2.1",
     "angularx-social-login": "^1.2.7",
     "axios": "^0.19.0",
+    "card.io.cordova.mobilesdk": "^2.1.0",
+    "com.paypal.cordova.mobilesdk": "^3.5.0",
+    "cordova-android": "8.0.0",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-googleplus": "^8.0.0",
+    "cordova-plugin-stripe": "^1.5.3",
     "core-js": "^2.5.4",
     "firebase": "^6.4.0",
     "google-libphonenumber": "^3.2.3",
@@ -55,6 +65,12 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -71,8 +87,26 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.893912839232-s3nse0a5ihs4cqe885i1okp08n9oi36s"
-      }
-    }
+        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.893912839232-s3nse0a5ihs4cqe885i1okp08n9oi36s",
+        "PLAY_SERVICES_VERSION": "11.8.0"
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {},
+      "com.paypal.cordova.mobilesdk": {},
+      "cordova-plugin-stripe": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-file": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
